Update to Assignment 1

--- a/Assignments/Assignment1.tex
+++ b/Assignments/Assignment1.tex
@@ -65,6 +65,199 @@ Additional Sheets may be submitted if so desired.
 \end{enumerate}
 
 
+\newpage
+\begin{flushleft}
+\Large\textbf{Design Specification}\\
+\end{flushleft}
+
+
+The total floor area of the house should be approx 150$m^2$\\
+
+The following design may be used as a guide.  You may modify the proportions provided you maintain a protrusion at the front of the building.
+
+
+\begin{itemize}
+	\item Enterance Hall (2400mm wide)
+	\item Universilly Accessible Bathroom / Toilet
+	\item Kitchen / Dining (with fixed and loose furniture)
+	\item Living Room / Sitting Room (with direct access to kitchen)
+	\item Ground Floor Bedroom (Playroom / Study)
+	\item Externally accessed boiler house/shed
+	\item Stairs 900mm wide (Rise 171.9mm, Going 280mm)
+\end{itemize}
+
+
+
+\begin{figure}
+	\centering
+	\includegraphics[width=1.0\linewidth]{img/P01GroundFloorLevel.jpg}
+	\caption{Ground Floor}
+	\label{fig:p01groundfloorlevel}
+\end{figure}
+
+
+\newpage
+
+\begin{itemize}
+	\item 3 Bedrooms with en-suite sanitary facilities
+	\item Main Bathroom with Bath or Shower, WC and sink
+	\item Hot Press
+\end{itemize}
+
+
+
+\begin{figure}[th]
+	\centering
+	\includegraphics[width=1.0\linewidth]{img/P01FirstFloorLevel.jpg}
+	\caption{First Floor Plan}
+	\label{fig:p01firstfloorlevel}
+\end{figure}
+
+
+
+\begin{flushleft}
+	\Large\textbf{Construction Specification}\\
+\end{flushleft}
+
+\textbf{External Wall Specification} 
+
+External walls are to be twin leaf cavity construction and be of a 4 part Stacked Wall Type
+Wall-Ext-Stacked\_317 (4-Part-Dom) with the following layers
+
+\begin{enumerate}
+	\item L1\_Wall-Ext-CAv\_102Bwk-50Air-65Ins-100DBlk-15Rnd\&P (Gen Dom)
+	\begin{itemize}
+		\item Layer 1 (TopLayer) 'Variable'
+		\item (315mm wide insulated Cavity Walls over DPC level - Generally)
+		\item Made up of 102.5mm Brick / 50mm Air-gap / 65mm Insulation / 100mm Blockwork inner leaf
+		\item Internal Finish 15mm (total) Render and Plaster
+	\end{itemize}
+	
+	\item L2\_Wall-Ext\_CAv\_15Rnd-100Blk-50Air-65Ins-100DBlk-25Ins (Plinth)
+	\begin{itemize}
+		\item Layer 2 (Intermediate Layer) 225mm high
+		\item (315mm wide insulated Cavity Wall at Plinth level)
+		\item 15mm Cement Render (Plinth) / 100mm block / 50mm Air-gap / 65mm Insulation / 100mm Block
+		\item 25mm thick perimeter insulation up-stand to internal face
+	\end{itemize}
+	
+	
+	\item L3\_Wall-Ext-Cav\_100Blk-115Conc-100DBlk (Rising Wall)
+	\begin{itemize}
+		\item Layer 3 (Intermediate Layer) 225mm high
+		\item (315mm wide un-insulated Rising Wall)
+		\item 100mm Block / 115mm wide Concrete filled cavity / 100mm Block inner leaf
+	\end{itemize}
+	
+	
+	\item L4\_Wall-Solid-440\_Trench-Blk
+	\begin{itemize}
+		\item Layer 4 (Base Layer) 675mm high
+		\item (440mm wide Solid Trench Blockwork)
+	\end{itemize}
+\end{enumerate}
+
+Foundations (Footings)
+
+\begin{itemize}
+	\item 1350 wide x 450 deep strip foundation
+	\item Top of Strip foundation to be 1050mm below Gr. Floor level
+\end{itemize}
+1350 wide x 450 deep strip foundation
+
+
+\textbf{Internal Wall Specification}
+
+Ground Floor Internal Walls
+Generally, Single leaf 100mm concrete block walls 15mm render / plaster both sides
+(Wall-Part\_15Rnd\&P-100Blk-15Rnd\&P)
+
+First Floor Internal Walls 
+Landing Area
+Single leaf 100mm concrete block walls, 15mm render / plaster both sides
+(Wall-Part\_15Rnd\&P-100Blk-15Rnd\&P)
+Elsewhere
+100mm timber stud partition, 15mm plaster slab / plaster both sides
+(Wall-Stud-Part\_15Gwb\&P-100Stud-15Gwb\&P)
+
+
+\textbf{Floor Specification}
+
+
+
+
+
+
+
+\textbf{Windows and Doors}
+\begin{itemize}
+	\item Head height - 2100mm
+	\item Revit Library standard door types may be used
+	\item External Front Door: Decorative type (panelled door with glazed side panels)
+	\item External Kitchen and Boiler house doors to have glazed panels
+	\item Generally, internal single doors to be standard flush-panel or regency panelled type
+	\item Kitchen to living room doors to be double leaf, glazed multi-panel style
+	\item Windows generally to be double or triple sash type with opening vents
+	\item Dormer window: Rectangle or circular type as desired.
+\end{itemize}
+
+
+
+
+
+
+\textbf{Electrical Fittings}
+\begin{itemize}
+	\item Kitchen and Living Room only, to be visible in Section or Camera View
+	\item 2 No. Ceiling or Wall mounted light fittings per room
+	\item 2 no. Twin Switched Socket power outlets per room
+\end{itemize}
+
+
+
+
+
+\textbf{Ceilings}
+\begin{itemize}
+	\item 3mm Skim Coat Plaster on Gypsum Wall Board
+	\item Revit Library 'modified' ceiling type (Compound Ceiling Plain)
+	\item Ceiling Cut-outs required for Stairs and Dormer Window.
+\end{itemize}
+
+
+
+\textbf{Roof Type}
+\begin{itemize}
+	\item Roof by Footprint
+	\item Pitch 35\degree (also on Dormer)
+	\item Main Roof overhang to be approx 300mm clear of outer leaf
+	\item Dormer overhang to be approx 200mm clear of dormer walls
+\end{itemize}
+
+
+
+\textbf{Roof Construction Specification}
+\begin{itemize}
+	\item Revit Library roof type 'Roof\_Pitched\_38Tile-25Bat-0Felt-25Bat-100Ins-150Truss-12PBd to be modified as follows: Roof\_Pitched\_38Tile-38Bat-0Feld-150Truss. ie 38mm Roofing Tile on 38mm battens on Roof Membrane on 150mm Structure (Truss / Rafter)
+\end{itemize}
+
+
+
+
+\textbf{Provide the Following}
+\begin{itemize}
+	\item Facia Boards, Flat Soffits, Rainwater Gutters, Downpipes and all necessary information to communicate design intent.
+\end{itemize}
+
+
+
+
+
+\textbf{Site}
+
+
+
+
 \input{FileSetup.tex}
 
 \input{LateSubmission.tex}
