--- a/Assignments/HeadMatter.tex
+++ b/Assignments/HeadMatter.tex
@@ -12,6 +12,7 @@
 \usepackage{wrapfig}
 \usepackage{enumitem}
 \usepackage{booktabs}
+\usepackage{gensymb}
 
 \hypersetup{
     bookmarks=true,         % show bookmarks bar?
