--- a/Assignments/Assignment2.tex
+++ b/Assignments/Assignment2.tex
@@ -1,25 +1,21 @@
 \input{HeadMatter.tex}
 	
-\begin{flushleft}
-\Large\textbf{Assignment 2 (33\%) - Commercial Units}\\
-\end{flushleft}
+\part*{Assignment 2 (33\%) - Commercial Units}
 
-\begin{tabular}{|l|l|}
+\begin{tabularx}{\textwidth}{ |X|X| }
+	\hline
+	\textbf{Issue Date:} & As stated on Moodle \\
 	\hline 
-	Issue Date & As per Moodle \\ 
-	\hline 
-	Submission Date & As per Moodle \\ 
-	\hline 
-\end{tabular} 
-\\
+	\textbf{Submission Date:}  & As stated on Moodle  \\
+	\hline
+\end{tabularx}
 
-\large\textbf{Assignment Outline}\\
+\section*{Assignment Outline}
 
 You are required to model a three unit retail building facility to the specification as detailed below and on the sample design drawings.  Your design will also become the part of the basis of Assignment 3.
 
-\begin{flushleft}
-	\large\textbf{Specification}\\
-\end{flushleft}
+\section*{Specification}
+
 
 \begin{itemize}
 	\item Your design should be similar to that shown in the attached drawings
@@ -27,10 +23,8 @@ You are required to model a three unit retail building facility to the specifica
 \end{itemize}
 
 
-\begin{flushleft}
-	\large\textbf{External Walls}\\
-\end{flushleft}
-Min 5 part Stacked wall with 215mm block inner leaf.  Wall-Ext-Stacked\_5-Parts(Commercial), L1 to L5, from the top down:
+\subsection*{External Walls}
+A 5 part Stacked wall with 215mm block inner leaf.  Wall-Ext-Stacked\_5-Parts(Commercial), L1 to L5, from the top down:
 \begin{itemize}
 	\item L1\_Wall-Ext\_102Bwk-50Air-65Ins-215DBlk-15Rnd\&P (Commercial Wall); variable height
 	\item L2\_Wall-Ext\_100St-50Air-65Ins-215DBlk-15Rnd\&P (Banding); 1200mm high
@@ -42,21 +36,16 @@ Min 5 part Stacked wall with 215mm block inner leaf.  Wall-Ext-Stacked\_5-Parts(
 
 
 
-\begin{flushleft}
-	\large\textbf{Internal Walls}\\
-\end{flushleft}
-
+\subsection*{Internal Walls}
 \begin{itemize}
 	\item Generally: 100 \& 215mm blockwork
 	\item Separating Walls: 215 blockwork
-	\item Galzed Curtain Walls to front
+	\item Glazed Curtain Walls to front
 \end{itemize}
 
 
-\begin{flushleft}
-	\large\textbf{Foundations}\\
-\end{flushleft}
 
+\subsection*{Foundations}
 \begin{itemize}
 	\item 1350mm wide x 600  deep strip foundations to external walls
 	\item 700mm wide x 450mm deep strip foundations to separating walls
@@ -64,21 +53,25 @@ Min 5 part Stacked wall with 215mm block inner leaf.  Wall-Ext-Stacked\_5-Parts(
 \end{itemize}
 
 
-
-
-\begin{flushleft}
-	\large\textbf{Floors}\\
-\end{flushleft}
-
+\subsection*{Floors}
 \begin{itemize}
-	\item Ground Floor: (Floor-GF-Comm\_150PFConc-100Ins-DPM-50Sand-200SHc); 150 Power floated concrete slab on 100mm Insulation on DPM on 50mm Sand on 200 Site Hardcore
-	\item First Floor: (Floor-FF-Comm\_75SScr-150PCU); 75mm Structural Screed on 150mm Precast Concrete Units
+	\item Ground Floor: (Floor-GF-Comm\_150PFConc-100Ins-DPM-50Sand-200SHc);
+	\begin{itemize}
+		\item 150 Power floated concrete slab on
+		\item 100mm Insulation on
+		\item DPM on 
+		\item 50mm Sand on 
+		\item 200 Site Hardcore
+	\end{itemize}   
+	\item First Floor: (Floor-FF-Comm\_75SScr-150PCU);
+	\begin{itemize}
+		\item 75mm Structural Screed on 
+		\item 150mm Precast Concrete Units
+	\end{itemize} 
 \end{itemize}
 
 
-\begin{flushleft}
-	\large\textbf{Ceilings}\\
-\end{flushleft}
+\subsection*{Ceilings}
 3 No ceiling types to be included
 \begin{itemize}
 	\item 600 x 600mm grid
@@ -88,36 +81,41 @@ Min 5 part Stacked wall with 215mm block inner leaf.  Wall-Ext-Stacked\_5-Parts(
 
 
 
-\begin{flushleft}
-	\large\textbf{Lighting}\\
-\end{flushleft}
+\subsection*{Lighting}
 3 No different light fittings to be incorporated into the ceiling
 
 
-\begin{flushleft}
-	\large\textbf{Roof}\\
-\end{flushleft}
+\subsection*{Roof}
 \begin{itemize}
-	\item Roof to be Revit Standard, basic roof 
-	\item Pitched Warm Industrial on Steel Roof trusses on Steel or Concrete columns built into walls
-	\item 
-	\item plastered compound ceiling
+	\item Roof to be Revit Standard, Basic Roof - Pitched Warm Industrial on Steel Roof trusses on Steel or Concrete columns built into walls
 \end{itemize}
 
-\begin{flushleft}
-	\large\textbf{Site}\\
-\end{flushleft}
+
+\subsection*{Site}
 Flat toposurface of approx 90m wide x 80mm with Building Pads, some trees, cars and people
 
 
 
 
+\newpage
+\section*{Your Submission should contain the following}
 
-\begin{flushleft}
-	\Large\textbf{Your Submission should contain the following}\\
-\end{flushleft}
 
-\textbf{Sheet 1:} Sheet Size - A4, Sheet No - B101, Sheet Name - Cover Sheet
+\begin{tabularx}{\textwidth}{ |c|c|X| }
+	\hline
+	\textbf{Sheet Size} & \textbf{Sheet No.} & \textbf{Title} \\
+	\hline 
+	A1  & B101 & Cover Sheet \\
+	A1  & B102 & Ground Floor Plan \\
+	A1  & B103 & First Floor Plan \\
+	A1  & B104 & North \& South Elevations \\
+	A1  & B105 & East \& West Elevations \\
+	A1  & B106 & Sections, Details and Schedules \\
+	\hline
+\end{tabularx}
+
+
+\subsection*{B101 - Cover Sheet}
 \begin{itemize}
 	\item Three Dimensional (Aerial View) of the model
 	\item A list of the drawings in the design pack
@@ -125,33 +123,30 @@ Flat toposurface of approx 90m wide x 80mm with Building Pads, some trees, cars 
 \end{itemize}
 
 
-\textbf{Sheet 2:} Sheet Size - A1, Sheet No - B102, Sheet Name - Ground Floor Plan
+\subsection*{B102 - Ground Floor Plan}
 \begin{itemize}
 	\item Ground Floor Plan @ 1:100 with dimensions and Room Titles
 \end{itemize}
 
 
-\textbf{Sheet 3:} Sheet Size - A1, Sheet No - B103, Sheet Name - First Floor Plan
+\subsection*{B103 - First Floor Plan}
 \begin{itemize}
 	\item First Floor Plan @ 1:100 with dimensions and Room Titles
 \end{itemize}
 
 
 
-\textbf{Sheet 4:} Sheet Size - A1, Sheet No - B104, Sheet Name - North \& South Elevations
+\subsection*{B104 - North \& South Elevations}
 \begin{itemize}
 	\item North \& South Elevation @ 1:100
 \end{itemize}
 
-\textbf{Sheet 5:} Sheet Size - A1, Sheet No - B105, Sheet Name - East \& West Elevations
+\subsection*{B105 - East \& West Elevations}
 \begin{itemize}
 	\item East \& West Elevation @ 1:100
 \end{itemize}
 
-
-
-
-\textbf{Sheet 6:} Sheet Size - A1, Sheet No - B106, Sheet Name - Sections, Details and Schedules
+\subsection*{B106 - Sections, Details and Schedules:}
 \begin{itemize}
 	\item A longitudinal section facing East (Through Unit 1 Staircase) @ 1:100
 	\item A Cross Section facing North (Facing Unit 1 \& 2 Staircases and Mezzanines)
@@ -161,24 +156,19 @@ Flat toposurface of approx 90m wide x 80mm with Building Pads, some trees, cars 
 
 Additional Sheets may be submitted if so desired.
 
-\large\textbf{Presentation and Submission}\\
+
+
+
+\newpage
+\section*{Presentation and Submission}
+
 \begin{enumerate}
-	\item All drawing sheets must have the LIT Built Environment logo and be clearly marked 'Educational Exercise - Not for Construction
+	\item All drawing sheets must have the LIT Built Environment logo and be clearly marked 'Educational Exercise - Not for Construction.  Your name and K-number is to be clearly identifiable on all sheets.
 	\item Design drawings should be completed on a minimum of six A1 sheets at the scales stated above.  Additional sheets with detailed information or images may be submitted at your discretion.
 	\item You are required to submit you project as a single Revit (.rvt) file through Moodle
 	\item Drawings should show all necessary information to communicate design intent
-	\item The Revit filename should be of the form \textit{Semester  + Year + Project No. + First Initial + Surname + K-Number}. An example would be \textbf{'Spring18P02PVeseyK00123456.rvt'}.  Do not use spaces in the filename.
+	\item The Revit filename should be of the form \textit{Semester  + Year + Project No. + First Initial + Surname + K-Number}.\\ An example would be \textbf{'Spring18P02PVeseyK00123456.rvt'}.  Do not use spaces in the filename.
 	\item Your drawings should show all necessary information to communicate design intent. 
 \end{enumerate}
-
-
-
-
-\input{FileSetup.tex}
-
-\input{LateSubmission.tex}
-
-
-
 
 \end{document}
