--- a/Assignments/Assignment3.tex
+++ b/Assignments/Assignment3.tex
@@ -1,17 +1,19 @@
 \input{HeadMatter.tex}
 	
 \begin{flushleft}
-\Large\textbf{Assignment 3 (33\%) - Miscellanious Activites in 4 Parts (Total 7 Files)}\\
+\Large\textbf{Assignment 3 (33\%) - Miscellaneous Activities in 4 Parts (Total 7 Files)}\\
 \end{flushleft}
 
-\begin{tabular}{|l|l|}
+
+\begin{tabularx}{\textwidth}{ |X|X| }
+	\hline
+	\textbf{Issue Date:} & As stated on Moodle \\
 	\hline 
-	Issue Date & As per Moodle \\ 
-	\hline 
-	Submission Date & As per Moodle \\ 
-	\hline 
-\end{tabular} 
-\\
+	\textbf{Submission Date:}  & As stated on Moodle  \\
+	\hline
+\end{tabularx}
+
+
 \begin{flushleft}
 \large\textbf{Assignment Outline}\\
 \end{flushleft}
@@ -119,13 +121,6 @@ Using the Week 2 Original Sample Building, create or export the following file t
 	\item Make a .pdf of the floor plan
 \end{enumerate}
 The exported filename should be of the form \textit{Semester  + Year + Project No.+ Part + First Initial + Surname + K-Number}. An example would be \textbf{'Spring18P04-1PVeseyK00123456.rvt'}.  Do not use spaces in the filenames.
-
-
-
-
-\input{FileSetup.tex}
-
-\input{LateSubmission.tex}
 
 
 
