--- a/Assignments/HeadMatter.tex
+++ b/Assignments/HeadMatter.tex
@@ -13,6 +13,7 @@
 \usepackage{enumitem}
 \usepackage{booktabs}
 \usepackage{gensymb}
+\usepackage{tabularx}
 
 \hypersetup{
     bookmarks=true,         % show bookmarks bar?
