--- a/Assignments/Assignment1.tex
+++ b/Assignments/Assignment1.tex
@@ -1,8 +1,6 @@
 \input{HeadMatter.tex}
 	
-\begin{flushleft}
-\Large\textbf{Assignment 1 (33\%) - Detached 2 Storey Residence with Dormer Window}\\
-\end{flushleft}
+\part*{Assignment 1 (33\%) - Detached 2 Storey Residence with Dormer Window}
 
 \begin{tabularx}{\textwidth}{ |X|X| }
 	\hline
@@ -13,15 +11,14 @@
 \end{tabularx}
 
 
-\begin{flushleft}
-\large\textbf{Assignment Outline}\\
-\end{flushleft}
+\section*{Assignment Outline}
+
 
 You are required to model a two storey house incorporating a dormer window and to digitally submit you project file (.rvt) showing your model on one A4 sheet and three A1 sheets.
 
-\begin{flushleft}
-\large\textbf{Your Submission should contain the following drawings}\\
-\end{flushleft}
+
+\section*{Your Submission should contain the following drawings}
+
 
 
 \begin{tabularx}{\textwidth}{ |c|c|X| }
@@ -37,27 +34,27 @@ You are required to model a two storey house incorporating a dormer window and t
 
 Details of the requirements for each drawing are given below:\\
 
-\textbf{A101 - Cover Sheet}
+\subsection*{A101 - Cover Sheet}
 \begin{itemize}
 	\item Three Dimensional (Aerial View) of the model (scaled to suit the sheet size) Shaded
 	\item A list of the drawings in the design pack
 \end{itemize}
 
 
-\textbf{A102 - Floor Plans}
+\subsection*{A102 - Floor Plans}
 \begin{itemize}
 	\item Ground and First Floor Plans @ 1:50 with dimensions, Room Titles ans some fixed furniture
 	\item Two internal camera views, (scaled to suit the sheet size) rendered using the Autodesk 360 cloud rendering service.  \textit{One of the fireplace and one of the kitchen units} 
 \end{itemize}
 
 
-\textbf{A103 - Elevations}
+\subsection*{A103 - Elevations}
 \begin{itemize}
 	\item South Elevation @ 1:50
 	\item North, East and West Elevations @ 1:100
 \end{itemize}
 
-\textbf{A104 - Sections and Details}
+\subsection*{A104 - Sections and Details}
 \begin{itemize}
 	\item Three sections are required
 	\item Section thro' Kitchen / Sitting Room facing East (towards fireplace) @ 1:100
@@ -75,7 +72,7 @@ Additional Sheets may be submitted if so desired.
 
 
 \begin{flushleft}
-\large\textbf{Presentation and Submission}\\
+\section*{Presentation and Submission}
 \end{flushleft}
 
 
@@ -88,9 +85,9 @@ Additional Sheets may be submitted if so desired.
 
 
 \newpage
-\begin{flushleft}
-\Large\textbf{Design Specification}\\
-\end{flushleft}
+
+\section*{Design Specification}
+
 
 
 The total floor area of the house should be approx 150$m^2$\\
@@ -137,9 +134,9 @@ The following design may be used as a guide.  You may modify the proportions pro
 
 
 \newpage
-\begin{flushleft}
-	\Large\textbf{Construction Specification}\\
-\end{flushleft}
+
+\section*{Construction Specification}
+
 
 \textbf{External Wall Specification} 
 
@@ -188,7 +185,7 @@ Foundations (Footings)
 1350 wide x 450 deep strip foundation
 
 
-\textbf{Internal Wall Specification}
+\subsection*{Internal Wall Specification}
 
 \begin{itemize}
 	\item Ground Floor Internal Walls
@@ -204,7 +201,7 @@ Foundations (Footings)
 
 
 
-\textbf{Floor Specification}
+\subsection*{Floor Specification}
 
 
 \begin{itemize}
@@ -232,7 +229,7 @@ Foundations (Footings)
 
 
 
-\textbf{Windows and Doors}
+\subsection*{Windows and Doors}
 \begin{itemize}
 	\item Head height - 2100mm
 	\item Revit Library standard door types may be used
@@ -249,7 +246,7 @@ Foundations (Footings)
 
 
 
-\textbf{Electrical Fittings}
+\subsection*{Electrical Fittings}
 \begin{itemize}
 	\item Kitchen and Living Room only, to be visible in Section or Camera View
 	\item 2 No. Ceiling or Wall mounted light fittings per room
@@ -260,7 +257,7 @@ Foundations (Footings)
 
 
 
-\textbf{Ceilings}
+\subsection*{Ceilings}
 \begin{itemize}
 	\item 3mm Skim Coat Plaster on Gypsum Wall Board
 	\item Revit Library 'modified' ceiling type (Compound Ceiling Plain)
@@ -269,7 +266,7 @@ Foundations (Footings)
 
 
 
-\textbf{Roof Type}
+\subsection*{Roof Type}
 \begin{itemize}
 	\item Roof by Footprint
 	\item Pitch 35\degree (also on Dormer)
@@ -279,7 +276,7 @@ Foundations (Footings)
 
 
 
-\textbf{Roof Construction Specification}
+\subsection*{Roof Construction Specification}
 \begin{itemize}
 	\item Revit Library roof type 'Roof\_Pitched\_38Tile-25Bat-0Felt-25Bat-100Ins-150Truss-12PBd to be modified as follows: Roof\_Pitched\_38Tile-38Bat-0Feld-150Truss.
 	\begin{itemize}
@@ -293,14 +290,14 @@ Foundations (Footings)
 
 
 
-\textbf{General Building}\\
+\subsection*{General Building}
 Provide the following
 \begin{itemize}
 	\item Facia Boards, Flat Soffits, Rainwater Gutters, Downpipes and all necessary information to communicate design intent.
 \end{itemize}
 
 
-\textbf{Site}
+\subsection*{Site}
 \begin{itemize}
 	\item A basic flat topographical layer (Toposurface) is to be inserted in the Site View.  The toposurface be created at an elevation of -225mm
 \end{itemize}
