--- a/Assignments/Assignment3.tex
+++ b/Assignments/Assignment3.tex
@@ -1,8 +1,8 @@
 \input{HeadMatter.tex}
 	
-\begin{flushleft}
-\Large\textbf{Assignment 3 (33\%) - Miscellaneous Activities in 4 Parts (Total 7 Files)}\\
-\end{flushleft}
+
+\part*{Assignment 3 (33\%) - Miscellaneous Activities in 4 Parts (Total 7 Files)}
+
 
 
 \begin{tabularx}{\textwidth}{ |X|X| }
@@ -14,16 +14,27 @@
 \end{tabularx}
 
 
-\begin{flushleft}
-\large\textbf{Assignment Outline}\\
-\end{flushleft}
+
+\section*{Assignment Outline}
+
 
 
 In these exercises you are required to create a number of new items and modify the existing designs created during Assignment 2 and Assignment 3.  This assignment consists of 4 parts, each of which has its own set of deliverables and submission file or files.
 
-\begin{flushleft}
-	\large\textbf{Part 1 - Domestic Building Details}\\
-\end{flushleft}
+\newpage
+\section*{Part 1 - Domestic Building Details}
+
+
+
+\begin{figure}
+	\centering
+	\includegraphics[width=1.0\linewidth]{img/House}
+	\caption{Domestic Building}
+	\label{fig:house}
+\end{figure}
+
+
+
 Using the Residential model developed for Assignment 1, make the following amendments to your design.
 \begin{enumerate}
 	\item\label{itm:roof} Roof: Change the roof name to Domestic Roof with Conc Tile finish, and change the roof make-up to 
@@ -61,14 +72,22 @@ Make use of the Masking and Component tools, and the 'Repeating Detail' function
 
 
 \newpage
-\begin{flushleft}
-	\large\textbf{Part 2 - Commercial Building Details}\\
-\end{flushleft}
+
+\section*{Part 2 - Commercial Building Details}
+
+\begin{figure}
+	\centering
+	\includegraphics[width=1.0\linewidth]{img/RetailBuilding}
+	\caption{Commercial Building}
+	\label{fig:retailbuilding}
+\end{figure}
+
+
 
 Using the Commercial Building model developed for Assignment 2, make the following amendments to your design. 
 
 \begin{enumerate}
-	\item Roof: Create a curved extruded roof similar to the diagram shown in Figure \ref{fig:slopedRoof}
+	\item Roof: Create a curved extruded roof similar to the diagram shown in Figure \ref{fig:retailbuilding}
 	
 	\item 3D Views: Create 3 Autodesk 360 rendered images and import them into a new sheet, B107.
 	\begin{itemize}
@@ -76,7 +95,7 @@ Using the Commercial Building model developed for Assignment 2, make the followi
 		\item Internal view of one retail unit facing the curtain wall, and picking up the stairs
 		\item Internal view of your choice from the First Floor landing 
 	\end{itemize} 
-	\item Solar Study: Create a solar study for the 16$^th$ of June 2018 and place a view of 14:30 hours onto sheet B107.  Render your image using the 'shaded' setting; do not fully render.  
+	\item Solar Study: Create a solar study for the 16\textsuperscript{th} of June 2018 and place a view of 14:30 hours onto sheet B107.  Render your image using the 'shaded' setting; do not fully render.  
 	\item Walk-throughs: Create the following walk-throughs using the 'Shaded' setting.  Do not fully render the animation.  The maximum number of frames required is 300.
 	\item Sloping Toposurface: Create a sloped topographical surface (approx 80m x 90m) incorporating a slope from approx 5m hight at the rear, and 8.0m out from the building, to -225mm at the front of the building, and over the front area of the site.
 	\begin{itemize}
@@ -90,9 +109,19 @@ Using the Commercial Building model developed for Assignment 2, make the followi
 
 
 \newpage
-\begin{flushleft}
-	\large\textbf{Part 3 - Building Mass}\\
-\end{flushleft}
+
+\section*{Part 3 - Building Mass}
+
+
+\begin{figure}
+	\centering
+	\includegraphics[width=1.0\linewidth]{img/HexBuilding}
+	\caption{Building from Building Mass}
+	\label{fig:hexbuilding}
+\end{figure}
+
+
+
 In this part you will create a 10 storey building, typical FFL to FFL of 3.0m. The following information is provided
 \begin{itemize}
 	\item Top Floor height = 30,000mm
@@ -110,9 +139,9 @@ In this part you will create a 10 storey building, typical FFL to FFL of 3.0m. T
 
 
 \newpage
-\begin{flushleft}
-	\large\textbf{Part 4 - Interoperability (File Exchange formats)}\\
-\end{flushleft}
+
+\section*{Part 4 - Interoperability (File Exchange formats)}
+
 Using the Week 2 Original Sample Building, create or export the following file types from Revit
 \begin{enumerate}
 	\item Export the floor plan in Autocad .dwg format
