Update for MEP NightCourse
Update to Assignments and Upgrade of teaching assets

--- a/Architecture/Assignments/HeadMatter.tex
+++ b/Architecture/Assignments/HeadMatter.tex
@@ -60,9 +60,8 @@
 				Subject: & \textbf{Building Information Modelling}\\
 								 & \textbf{with Revit Architecture}\\
 				Course: & \textbf{Revit Night Course}\\
-				Session: & \textbf{Spring 2018}\\
-				Lecturer: & \textbf{Philip O'Shea}\\
-				          & \textbf{Paul Vesey \footnotesize{BEng, MIE, HDip}}\\
+				Session: & \textbf{Autumn 2019}\\
+				Lecturer: & \textbf{Paul Vesey \footnotesize{BEng, MIE, HDip}}\\
 				\hline
 			\end{tabular}
 		\end{large}			
