--- a/MEP/Assignments/Assignment1.tex
+++ b/MEP/Assignments/Assignment1.tex
@@ -4,7 +4,7 @@
 
 \begin{tabularx}{\textwidth}{ |X|X| }
 	\hline
-	\textbf{Issue Date:} & 29$^{th}$ January 2019 \\
+	\textbf{Issue Date:} & As stated on Moodle \\
 	\hline 
 	\textbf{Submission Date:}  & As stated on Moodle  \\
 	\hline
