Update for Spring 2020

--- a/MEP/Assignments/HeadMatter.tex
+++ b/MEP/Assignments/HeadMatter.tex
@@ -60,7 +60,7 @@
 				Subject: & \textbf{Building Information Modelling}\\
 								 & \textbf{with Revit MEP}\\
 				Course: & \textbf{BIM with Revit MEP}\\
-				Session: & \textbf{Autumn 2019}\\
+				Session: & \textbf{Spring 2020}\\
 				Lecturer: & \textbf{Paul Vesey \footnotesize{BEng, MIE, HDip}}\\
 				\hline
 			\end{tabular}
