--- a/Architecture/Assignments/HeadMatter.tex
+++ b/Architecture/Assignments/HeadMatter.tex
@@ -60,7 +60,7 @@
 				Subject: & \textbf{Building Information Modelling}\\
 								 & \textbf{with Revit Architecture}\\
 				Course: & \textbf{Revit Night Course}\\
-				Session: & \textbf{Autumn 2019}\\
+				Session: & \textbf{Spring 2020}\\
 				Lecturer: & \textbf{Paul Vesey \footnotesize{BEng, MIE, HDip}}\\
 				\hline
 			\end{tabular}
