--- a/Architecture/Assignments/HeadMatter.tex
+++ b/Architecture/Assignments/HeadMatter.tex
@@ -1,11 +1,13 @@
 \documentclass[a4paper, 10pt]{article}
+\usepackage{fontspec}
+\setmainfont{Lato}
 \usepackage{pgf}
 \usepackage{eurosym}
 \usepackage{graphicx}
 \usepackage{wasysym}
 \usepackage{hyperref}
 \usepackage{listings}
-\usepackage{pxfonts}
+%\usepackage{pxfonts}
 \usepackage{verbatim}
 \usepackage{color}
 \usepackage{xcolor}
@@ -59,7 +61,7 @@
 			\begin{tabular}{| r | l |} \hline
 				Subject: & \textbf{Building Information Modelling}\\
 								 & \textbf{with Revit Architecture}\\
-				Course: & \textbf{Revit Night Course}\\
+				Course: & \textbf{Revit Online}\\
 				Session: & \textbf{Spring 2020}\\
 				Lecturer: & \textbf{Paul Vesey \footnotesize{BEng, MIE, HDip}}\\
 				\hline
