Change to Zip requirements

--- a/MEP/Assignments/Assignment1.tex
+++ b/MEP/Assignments/Assignment1.tex
@@ -30,6 +30,6 @@ The asset pack for this assignment contains the following items:
 
 
 \section*{Submission}
-Upon completion, create a single zip file of your Revit project including the architectural model. Upload this single zip file to Moodle on or before the submission deadline.
+Upon completion, create a single zip file of your Revit project including the architectural model. Upload this single zip file to Moodle on or before the submission deadline.  Please do not use .rar or 7-zip compression tools; please use the standard zip compression provided by Windows File Explorer.
 
 \end{document}
